--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <input type="file" accept=".wav" id="audioFile">
+    <form id="theform">
+    <input type="file" accept=".wav" id="audioFile" name="file">
+</form>
     <button onclick="sendFileToServer()"></button>
 
     <script src="static/js/script.js"></script>
