--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   </head>
   <body>
-    <nav id="Header"></nav>
+    <nav id="Header"><span class="material-symbols-outlined">
+      mic
+      </span>VoiceNotes</nav>
     <form id="theform">
     <input type="file" accept=".wav" id="audioFile" name="file">
 </form>
