--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>VoiceNotes</title>
     <link rel="stylesheet" href="static/style/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <script src="https://cdn.cdnhub.io/opus-recorder/8.0.5/recorder.min.js"></script>
   </head>
   <body>
     <nav id="Header"><span class="material-symbols-outlined">
