--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>VoiceNotes</title>
     <link rel="stylesheet" href="static/style/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="https://cdn.cdnhub.io/opus-recorder/8.0.5/recorder.min.js"></script>
   </head>
   <body>
     <nav id="Header"><span class="material-symbols-outlined">
@@ -19,12 +18,16 @@
 <div id="RecordWrapper">
   <h1>Record Audio or Upload A .wav File!</h1>
   <span>This website is designed to take notes for you!</span>
+  <!--
   <button id="recordButton" class="RecordButton" onclick="micToggle()"><span class="material-symbols-outlined">
 mic
 </span></button>
+-->
 <audio id="audioPreview" controls></audio>
 <button class="audioButton" onclick="uploadAudio()">Upload Audio</button>
 <button class="audioButton" onclick="sendFileToServer()" style="background-color:rgb(112, 200, 112)">Submit</button>
+
+<p id="Notes">fjskfkls</p>
 </div>
 </audio>
 
